# smart-docx

./: README.md  pyproject.toml
src/smart_docx/: main.py  settings.py  smart_docx.py
src/smart_docx/llm/: generator.py  json_answer_generator.py  json_converter.py  jsonschema_output_validator.py
src/smart_docx/templates/: definitions.py  fields_generation.py  registry.py  rendering.py  validations.py
tests/smart_docx/docx/: test_docx_template.py  test_smart_docx.py
tests/smart_docx/docx/resources/: cooking.docx  cooking_template.docx  template_def.yaml
tests/smart_docx/docx/resources/raw/: output.docx  template.docx
tests/smart_docx/llm/: test_json_answer_generator.py  test_json_converter.py  test_jsonschema_output_validator.py
tests/smart_docx/main/: test_smart_docx.py
tests/smart_docx/main/resources/: cooking.docx  template_def.yaml
tests/smart_docx/templates/: test_definitions.py  test_rendering.py  test_validations.py
tests/smart_docx/templates/resources/: output.docx
